chore/DPM-268 - Fix dark mode colors

--- a/frontend/src/app/package/components/package-description/package-description.component.scss
+++ b/frontend/src/app/package/components/package-description/package-description.component.scss
@@ -24,7 +24,7 @@
         }
     }
     .ul-links {
-        color: $color-info;
+        color: var(--info-color);
         cursor: pointer;
         font-size: $text-font;
     }
@@ -57,7 +57,7 @@ markdown ::ng-deep {
 }
 
 .fade-out {
-    background: linear-gradient(to bottom, rgb(100 100 100 / 0%) 0%, #f5f5f5c9 75%);
+    background: var(--fade-out-shadow);
     height: 48px;
     margin-top: -48px;
     position: relative;
