--- a/frontend/src/app/package/components/package-schema/package-schema.component.scss
+++ b/frontend/src/app/package/components/package-schema/package-schema.component.scss
@@ -69,10 +69,3 @@
         }
     }
 }
-
-.fade-out {
-    background: linear-gradient(to bottom, rgb(100 100 100 / 0%) 0%, #f5f5f5c9 75%);
-    height: 48px;
-    margin-top: -48px;
-    position: relative;
-}
