--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -26,7 +26,7 @@ body {
 }
 
 h3 {
-    color: $gray-1;
+    color: var(--gray-1-color);
 }
 
 .color-info {
